2025-03-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/pk-term.c (pk_term_hyperlink_1): Only keep invocation of
	`styled_ostream_set_hyperlink' under
	`ifdef HAVE_TEXTSTYLE_HYPERLINK_SUPPORT' guard.
	(pk_term_end_hyperlink_1): Likewise.

2025-03-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/btf.pk (BTF_Type::has_type_ref): Use `int<32>' instead of `int'.
	(BTF_Type::has_size): Likewise.

2025-03-03  David Faust  <david.faust@oracle.com>

	* doc/poke.texi (Object Formats): Add entry for BPF.
	(BPF): New node describing the various BPF-related pickles.
	* pickles/bpfcore.pk: New pickle for dealing with BPF CO-RE.
	* pickles/btf.pk (BTF_Type): Minor cleanup and modernization.
	(BTF_Section): Add several new utility methods.
	* pickles/btf-dump.pk (btf_dump_type, btf_dump): Small adaptations
	for above changes.
	* pickles/Makefile.am (dist_pickles_DATA): Add `bpfcore.pk'.
	* utils/Makefile.am (bin_SCRIPTS): Add `pk-bpfcoredump'.
	(EXTRA_DIST): Add `pk-bpfcoredump.in'.
	(pk-bpfcoredump): Add rule for `pk-bpfcoredump.in`.
	* utils/pk-bpfcoredump.in: New Poke script for dumping BPF CO-RE
	relocations.

2025-03-03  David Faust  <david.faust@oracle.com>

	* pickles/bpf.pk: Rewrite to support ISA v3 and v4 instruction
	formats.

2025-03-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Compile constructor/mapper/
	comparator/integrator/deintegrator/typifier for alias types to have
	the correct names.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* testsuite/poke.map/type-alias-1.pk: New test.
	* testsuite/poke.pkl/type-alias-1.pk: Likewise.

2025-03-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Set name of PVM struct
	type to provided non-null compile-time name.

2025-03-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_struct): Add assertion to verify
	that we're generating constructor for an unnamed struct.
