@@ -1800,6 +1800,7 @@ EXTRA_DIST = \
   poke.pkl/integers-14.pk \
   poke.pkl/integers-15.pk \
   poke.pkl/integers-16.pk \
+  poke.pkl/integers-17.pk \
   poke.pkl/integers-diag-1.pk \
   poke.pkl/integers-diag-2.pk \
   poke.pkl/integers-diag-3.pk \
